<resources>
    <string name="app_name">Drug Deal</string>
    <string name="test_head">Application</string>
    <string name="job">JOB OPPORTUNITIES</string>
    <string name="promotions">OFFERS</string>
    <string name="drug_interactions">DRUG INTERACTIONS</string>
    <string name="prescription">PRESCRIPTIONS</string>
    <string name="buy_sell">SELL, BUY, RENT</string>
    <string name="drug_index">DRUG INDEX</string>
    <string name="facebook_app_id">241355193451426</string>
    <string name="fb_login_protocol_scheme">fb241355193451426</string>
    <string name="prescriptions_upload_string">UPLOAD YOUR PRESCRIPTION</string>
    <string name="prescriptions_loaded_string">PRESCRIPTION LOADED</string>
    <string name="prescriptions_publish_string">PRESS PUBLISH TO GET ANSWERS</string>
    <string name="prescriptions_gallery_button_string">Gallery</string>
    <string name="prescriptions_camera_button_string">Camera</string>
    <string name="prescriptions_post_button_string">PUBLISH</string>
    <string name="prescriptions_description_hint">PLACE YOUR QUESTIONS HERE !</string>
    <string name="prescriptions_description">ADD NEW  PRESCRIPTION :</string>
    <string name="comments_button_string">Comment</string>
    <string name="Signin_comment_toast">You must Sign-in to add a comment</string>
    <string name="Signin_prescriptions_toast">You must Sign-in to add a prescription</string>
    <string name="add_comment_toast">You must add a comment</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="post_prescriptions_success">Your prescription is added successfully</string>
    <string name="post_prescriptions_fail">Please choose an image and write a description</string>
    <string name="prescriptions_text">PRESCRIPTIONS</string>
    <string name="properties_text">ENROLL YOUR FACILITY FOR RENTING OR SELLING </string>
    <string name="post_properties_success">Your property is added successfully</string>
    <string name="properties_city"><font color='#cc0029'>*</font>City</string>
    <string name="properties_region"><font color='#cc0029'>*</font>Region</string>
    <string name="properties_name"><font color='#cc0029'>*</font>Name</string>
    <string name="properties_size">SPACE AREA</string>
    <string name="properties_profit">Profit</string>
    <string name="properties_address"><font color='#cc0029'>*</font>Address</string>
    <string name="properties_mobile"><font color='#cc0029'>*</font>Mobile</string>
    <string name="properties_mobile2">Second Mobile</string>
    <string name="properties_land_number">Land Line Number</string>
    <string name="properties_notes">Notes</string>
    <string name="properties_listed_for"><font color='#cc0029'>*</font>Listed For</string>
    <string name="properties_type"><font color='#cc0029'>*</font>Type</string>
    <string name="properties_price">EXPECTED PRICE</string>
    <string name="properties_mobile_phone">MOBILE PHONE</string>
    <string name="properties_description">Description, For Example you can write about what makes your facility special. or if it has a WIFI ,a place for storage</string>
    <string name="post_properties_fail">Please fill all the required fields</string>
    <string name="properties_price_per_month">*PlEASE MAKE SURE THAT YOUR PRICE <b>PER MONTH</b> </string>
    <string name="properties_average_daily">*PLEASE MAKE SURE THAT THIS IS YOUR <b>DAILY</b>  INCOME</string>
    <string name="mobile_properties_fail">Mobile number Field must be longer than 10 numbers</string>
    <string name="address_properties_fail">Address Field must be longer than 10 letters</string>
    <string name="name_properties_fail">Name Field must be longer than 3 letters</string>
    <string name="properties_filter_city">City</string>
    <string name="properties_average_daily_income">AVERAGE INCOME</string>
    <string name="properties_status"><font color='#cc0029'>*</font>Status</string>
    <string name="properties_pharmacy_name"><font color='#cc0029'>*</font>Pharmacy name</string>
    <string name="properties_warehouse_name"><font color='#cc0029'>*</font>Warehouse name</string>
    <string name="properties_factory_name"><font color='#cc0029'>*</font>Factory name</string>
    <string name="properties_hospital_name"><font color='#cc0029'>*</font>Hospital name</string>
    <string name="property_listed_for">LISTED FOR</string>
    <string name="property_price">PRICE</string>
    <string name="property_current_status">CURRENT STATUS</string>
    <string name="property_address">ADDRESS</string>
    <string name="property_space">space</string>
    <string name="property_average_daily_income">AVERAGE DAILY INCOME</string>
    <string name="property_contact">CONTACT:</string>
    <string name="property_tel">TEL:</string>
    <string name="property_description">DESCRIPTION</string>
    <string name="property_category">CATEGORY</string>
    <string name="LE">L.E</string>
    <string name="LE_H">L.E/H</string>
    <string name="LE_Month">L.E/M</string>
    <string name="LE_Day">L.E/D</string>
    <string name="m_square">M²</string>
    <string-array name="properties_listed_for_array">
        <item>SELLING</item>
        <item>RENTING</item>
    </string-array>
    <string-array name="properties_type_array">
        <item>Pharmacy</item>
        <item>Warehouse</item>
        <item>Factory</item>
        <item>Hospital</item>
    </string-array>
    <string name="filter_button_string">Apply Filter</string>
    <string name="properties_filter_sell_string">Properties for sale</string>
    <string name="properties_filter_rent_string">Properties for rent</string>
    <string name="properties_filter_pharmacy_string">Pharmacy</string>
    <string name="properties_filter_warehouse_string">Warehouse</string>
    <string name="properties_filter_factory_string">Factory</string>
    <string name="properties_filter_hospital_string">Hospital</string>
    <string name="properties_filter_listed_for">Listed For</string>
    <string name="properties_filter_type">Type</string>
    <string name="properties_filter_text">Filter Properties</string>
    <string name="properties_gallery_button_string">Upload From Gallery</string>
    <string name="properties_post_button_string">Publish This Ad</string>
    <string name="job_city"><font color='#cc0029'>*</font>CITY</string>
    <string name="job_address"><font color='#cc0029'>*</font>ADDRESS</string>
    <string name="job_region"><font color='#cc0029'>*</font>REGION</string>
    <string name="job_name"><font color='#cc0029'>*</font>COMPANY NAME</string>
    <string name="job_mobile"><font color='#cc0029'>*</font>MOBILE</string>
    <string name="job_email"><font color='#cc0029'>*</font>EMAIL</string>
    <string name="job_description"><font color='#cc0029'>*</font>DESCRIPTION</string>
    <string name="job_position"><font color='#cc0029'>*</font>POSITION</string>
    <string name="job_work_place"><font color='#cc0029'>*</font>WORKPLACE</string>
    <string name="job_range_salary">SALARY ٍRANGE</string>
    <string name="job_to_salary">TO</string>
    <string name="job_from_salary">FROM</string>
    <string name="job_run_this_ad_until">RUN THIS AD UNTIL</string>
    <string name="job_negotiable">NEGOTIABLE</string>
    <string name="job_new_opportunity">NEW JOB OPPORTUNITY</string>
    <string name="job_post_button">Publish This Ad</string>
    <string name="post_job_success">Your job is added successfully</string>
    <string name="job_filter_position">Position</string>
    <string name="job_filter_work_place">Workplace</string>
    <string name="job_filter_text">Filter Job Opportunities</string>
    <string name="job_hiring">HIRING</string>
    <string name="job_closed">CLOSED</string>
    <string name="drug_eye_similarities_button">Similarities</string>
    <string name="drug_eye_alternatives_button">Alternatives</string>
    <string name="search">Search</string>
    <string name="drug_eye_select_drug">Please choose a drug first</string>
    <string name="drug_eye_text">DRUG INDEX</string>
    <string name="drug_eye_old_price">OLD PRICE</string>
    <string name="drug_eye_new_price">NEW PRICE</string>
    <string name="drug_eye_category">CATEGORY</string>
    <string name="drug_eye_active_ingredients">ACTIVE INGREDIENTS</string>
    <string name="drug_eye_manufacturing_company">MANUFACTURING COMPANY</string>
    <string name="drug_eye_additional_information">ADDITIONAL INFORMATION</string>
    <string name="drug_eye_up_to_date">Your List is updated</string>
    <string name="drug_eye_updating">Please wait while your list is being updated...</string>
    <plurals name="images_count">
        <item quantity="one">%1$s image is selected press <b>Publish</b> to upload</item>
        <item quantity="other">%1$s images are selected press <b>Publish</b> to upload</item>
    </plurals>
    <string-array name="cities_array">
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Luxor</item>
        <item>Alexandria</item>
        <item>Ismailia</item>
        <item>Red Sea</item>
        <item>Beheira</item>
        <item>Giza</item>
        <item>Dakahlia</item>
        <item>Suez</item>
        <item>Sharqia</item>
        <item>Gharbia</item>
        <item>Fayoum</item>
        <item>Cairo</item>
        <item>Qalyubia</item>
        <item>Monufia</item>
        <item>Minya</item>
        <item>New Valley</item>
        <item>Beni Suef</item>
        <item>Port Said</item>
        <item>South Sinai</item>
        <item>Damietta</item>
        <item>Sohag</item>
        <item>North Sinai</item>
        <item>Qena</item>
        <item>Kafr al-Sheikh</item>
        <item>Matruh</item>
        <item>North Coast</item>
    </string-array>
    <string-array name="cities_array_filter">
        <item></item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Luxor</item>
        <item>Alexandria</item>
        <item>Ismailia</item>
        <item>Red Sea</item>
        <item>Beheira</item>
        <item>Giza</item>
        <item>Dakahlia</item>
        <item>Suez</item>
        <item>Sharqia</item>
        <item>Gharbia</item>
        <item>Fayoum</item>
        <item>Cairo</item>
        <item>Qalyubia</item>
        <item>Monufia</item>
        <item>Minya</item>
        <item>New Valley</item>
        <item>Beni Suef</item>
        <item>Port Said</item>
        <item>South Sinai</item>
        <item>Damietta</item>
        <item>Sohag</item>
        <item>North Sinai</item>
        <item>Qena</item>
        <item>Kafr al-Sheikh</item>
        <item>Matruh</item>
        <item>North Coast</item>
    </string-array>
    <string-array name="regions_array">
        <item></item>
    </string-array>
</resources>