<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddJobActivity">

    <include
        android:id="@+id/toolbar_nav"
        layout="@layout/toolbar_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/job_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_name" />

                <EditText
                    android:id="@+id/job_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_description" />

                <EditText
                    android:id="@+id/job_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_salary_range_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_range_salary" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_from_salary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_from_salary" />

                <EditText
                    android:id="@+id/job_from_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_to_salary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_to_salary" />

                <EditText
                    android:id="@+id/job_to_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_work_place_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_work_place" />

                <Spinner
                    android:id="@+id/job_work_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/job_work_place_array" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_position_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_position" />

                <Spinner
                    android:id="@+id/job_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/job_position_array" />

            </TableRow>


            <TableRow>

                <TextView
                    android:id="@+id/job_city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_city" />

                <Spinner
                    android:id="@+id/job_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/cities_array" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_region_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_region" />

                <Spinner
                    android:id="@+id/job_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_address" />

                <EditText
                    android:id="@+id/job_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/job_mobile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_mobile" />

                <EditText
                    android:id="@+id/job_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </TableRow>

            <Button
                android:id="@+id/job_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="addJob"
                android:text="@string/job_post_button" />

        </TableLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/job_post_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>