<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddPropertiesActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/properties_post_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/properties_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/properties_type_array" />

                <EditText
                    android:id="@+id/properties_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_pharmacy_name" />

                <EditText
                    android:id="@+id/properties_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_size"
                    android:inputType="phone" />

                <Spinner
                    android:id="@+id/properties_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/cities_array" />

                <Spinner
                    android:id="@+id/properties_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <EditText
                    android:id="@+id/properties_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_address"
                    android:lines="2" />

                <Spinner
                    android:id="@+id/properties_listed_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/properties_listed_for_array" />

                <Spinner
                    android:id="@+id/properties_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/properties_status_array" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/properties_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/properties_price"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/properties_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LE"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/properties_average_daily_income_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/properties_average_daily_income"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/properties_average_daily_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LE"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/properties_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_mobile"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/properties_mobile2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_mobile"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/properties_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/properties_description"
                    android:lines="3" />

                <Button
                    android:id="@+id/properties_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="openPropertiesGalleryIntent"
                    android:text="@string/prescriptions_gallery_button_string" />

                <Button
                    android:id="@+id/properties_post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="addProperties"
                    android:text="@string/prescriptions_post_button_string" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>