<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPrescriptionsActivity">

    <include
        android:id="@+id/toolbar_nav"
        layout="@layout/toolbar_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Description" />

    <EditText
        android:id="@+id/presecription_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/presecription_gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="openGalleryIntent"
        android:text="@string/prescriptions_gallery_button_string" />

    <Button
        android:id="@+id/presecription_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="openCameraIntent"
        android:text="@string/prescriptions_camera_button_string" />

    <Button
        android:id="@+id/presecription_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addPrescriptions"
        android:text="@string/prescriptions_post_button_string" />

    <ImageView
        android:id="@+id/uploaded_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/presecription_post_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>