<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewPropertyActivity">

    <include
        android:id="@+id/toolbar_nav"
        layout="@layout/toolbar_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_sell"
        android:textColor="#cc0029"
        android:textSize="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/properties_description"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/property_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/property_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/properties_notes"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/property_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/property_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/property_user_profile_picture"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/property_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/call_properties_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/call_button"
        app:backgroundTint="@color/cardview_light_background" />


    <ProgressBar
        android:id="@+id/property_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>